# JuceChorus-

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ChorusProcessor.cpp  ChorusProcessor.h
Source/GUI/: LookAndFeel.cpp  LookAndFeel.h  RotaryKnob.cpp  RotaryKnob.h
Source/Parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/Utils/: Constants.h  Helpers.h
Tests/: ChorusTests.cpp
